Closed Bug 1257028 Opened 8 years ago Closed 8 years ago

Fix fall back to d3d9 DXVA if D3D11 fails

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox47 --- fixed
firefox48 --- fixed

People

(Reporter: mattwoodrow, Assigned: mattwoodrow)

References

Details

Attachments

(2 files)

Attached patch Fix fallbackSplinter Review
This currently won't ever work because if success is false, then mDXVAManager is also false.
Attachment #8730989 - Flags: review?(cpearce)
Attachment #8730989 - Flags: review?(cpearce) → review+
https://hg.mozilla.org/mozilla-central/rev/acbda99b64a5
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
Note that this is a subset of the original patch, for uplift to 47, to support bug 1273691 (disable D3D11 for some DLLs).

Approval Request Comment
[Feature/regressing bug #]: D3D11 crashes in 47+
[User impact if declined]: Indirectly, crashes in 47+ if bug 1273691 is not uplifted.
[Describe test coverage new/current, TreeHerder]: Media tests and real-world usage in 48, Beta try: https://treeherder.mozilla.org/#/jobs?repo=try&revision=16097bdb480c1793da143a00610a3d2584c6ffbb
[Risks and why]: Low risk, as it's just falling back to D3D9 (which has been used a lot in the past) instead of just giving up on D3D altogether.
[String/UUID change made/needed]: None.
Attachment #8754575 - Flags: approval-mozilla-beta?
Comment on attachment 8754575 [details] [diff] [review]
1257028-extract-for-beta47.patch

Carrying r+ from original.
Attachment #8754575 - Flags: review+
Comment on attachment 8754575 [details] [diff] [review]
1257028-extract-for-beta47.patch

Disable D3D11 for some device drivers, this code stabilized on Aurora over the weekend, Beta47+
Attachment #8754575 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Blocks: 1346765
You need to log in before you can comment on or make changes to this bug.