Bug 1257028 - Fallback to d3d9 decoding if d3d11 fails. r=cpearce a=ritu

Extract from bug 1257028:
https://hg.mozilla.org/mozilla-central/rev/acbda99b64a5
For beta-47 uplift, required to meaningfully uplift bug 1273691.

(Uplifting bug 1257028 completely would carry other baggage not needed here.)